# phylorun

./: AGENTS.md  LICENSE  README.md  justfile  pyproject.toml
phylorun/: main.py
phylorun/engines/: __init__.py  beast2.py  beastX.py  engine.py  lphy.py  revBayes.py
phylorun/utils/: docker_utils.py
src/phylorun/: main.py
src/phylorun/engines/: beast2.py  engine.py  lphy.py  revBayes.py
src/phylorun/utils/: phylospec_utils.py
tests/: beastX.citations.txt  beastX.xml  beastx.trees  test_beast2_detection.py  test_beastX_detection.py  test_rev_bayes_detection.py
